--- a/deploy.spryker-faas-speu.yml
+++ b/deploy.spryker-faas-speu.yml
@@ -87,54 +87,54 @@ groups:
     EU:
         region: EU
         applications:
-            Redirects:
-                application: static
-                endpoints:
-                    www.faas-suite-prod.cloud.spryker.toys:
-                        store: DE
-                        redirect:
-                            code: 302
-                            url: yves.de.faas-suite-prod.cloud.spryker.toys
-                    yves.faas-suite-prod.cloud.spryker.toys:
-                        store: DE
-                        redirect:
-                            code: 302
-                            url: yves.de.faas-suite-prod.cloud.spryker.toys
-                    www.yves.faas-suite-prod.cloud.spryker.toys:
-                        store: DE
-                        redirect:
-                            code: 302
-                            url: yves.de.faas-suite-prod.cloud.spryker.toys
-                    www.de.faas-suite-prod.cloud.spryker.toys:
-                        store: DE
-                        redirect:
-                            code: 302
-                            url: yves.de.faas-suite-prod.cloud.spryker.toys
-                    www.at.faas-suite-prod.cloud.spryker.toys:
-                        store: AT
-                        redirect:
-                            code: 302
-                            url: yves.at.faas-suite-prod.cloud.spryker.toys
-                    backoffice.faas-suite-prod.cloud.spryker.toys:
-                        store: DE
-                        redirect:
-                            code: 302
-                            url: backoffice.de.faas-suite-prod.cloud.spryker.toys
-                    os.faas-suite-prod.cloud.spryker.toys:
-                        store: DE
-                        redirect:
-                            code: 302
-                            url: backoffice.de.faas-suite-prod.cloud.spryker.toys
-                    os.de.faas-suite-prod.cloud.spryker.toys:
-                        store: DE
-                        redirect:
-                            code: 302
-                            url: backoffice.de.faas-suite-prod.cloud.spryker.toys
-                    os.at.faas-suite-prod.cloud.spryker.toys:
-                        store: AT
-                        redirect:
-                            code: 302
-                            url: backoffice.at.faas-suite-prod.cloud.spryker.toys
+#             Redirects:
+#                 application: static
+#                 endpoints:
+#                     www.faas-suite-prod.cloud.spryker.toys:
+#                         store: DE
+#                         redirect:
+#                             code: 302
+#                             url: yves.de.faas-suite-prod.cloud.spryker.toys
+#                     yves.faas-suite-prod.cloud.spryker.toys:
+#                         store: DE
+#                         redirect:
+#                             code: 302
+#                             url: yves.de.faas-suite-prod.cloud.spryker.toys
+#                     www.yves.faas-suite-prod.cloud.spryker.toys:
+#                         store: DE
+#                         redirect:
+#                             code: 302
+#                             url: yves.de.faas-suite-prod.cloud.spryker.toys
+#                     www.de.faas-suite-prod.cloud.spryker.toys:
+#                         store: DE
+#                         redirect:
+#                             code: 302
+#                             url: yves.de.faas-suite-prod.cloud.spryker.toys
+#                     www.at.faas-suite-prod.cloud.spryker.toys:
+#                         store: AT
+#                         redirect:
+#                             code: 302
+#                             url: yves.at.faas-suite-prod.cloud.spryker.toys
+#                     backoffice.faas-suite-prod.cloud.spryker.toys:
+#                         store: DE
+#                         redirect:
+#                             code: 302
+#                             url: backoffice.de.faas-suite-prod.cloud.spryker.toys
+#                     os.faas-suite-prod.cloud.spryker.toys:
+#                         store: DE
+#                         redirect:
+#                             code: 302
+#                             url: backoffice.de.faas-suite-prod.cloud.spryker.toys
+#                     os.de.faas-suite-prod.cloud.spryker.toys:
+#                         store: DE
+#                         redirect:
+#                             code: 302
+#                             url: backoffice.de.faas-suite-prod.cloud.spryker.toys
+#                     os.at.faas-suite-prod.cloud.spryker.toys:
+#                         store: AT
+#                         redirect:
+#                             code: 302
+#                             url: backoffice.at.faas-suite-prod.cloud.spryker.toys
             mportal:
                 application: merchant-portal
                 endpoints:
