--- a/config/install/docker.yml
+++ b/config/install/docker.yml
@@ -144,7 +144,7 @@ sections:
 
     demodata:
         import-demodata:
-            command: 'vendor/bin/console data:import --config=data/import/local/full_${SPRYKER_REGION}.yml'
+            command: 'vendor/bin/console data:import --config=data/import/local/full_EU.yml'
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update'
