--- a/config/install/production.yml
+++ b/config/install/production.yml
@@ -50,4 +50,4 @@ sections:
 
     demodata:
         import-demodata:
-            command: 'vendor/bin/console data:import --config=data/import/local/full_${SPRYKER_REGION}.yml'
+            command: 'vendor/bin/console data:import --config=data/import/local/full_EU.yml'
