--- a/tests/PyzTest/Glue/Checkout/codeception.yml
+++ b/tests/PyzTest/Glue/Checkout/codeception.yml
@@ -40,6 +40,7 @@ suites:
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
                 - \SprykerTest\Shared\ServicePoint\Helper\ServicePointHelper
+                - \SprykerTest\Shared\ShipmentType\Helper\ShipmentTypeHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
