--- a/config/install/destructive.dynamic-store-off.yml
+++ b/config/install/destructive.dynamic-store-off.yml
@@ -1,20 +1,39 @@
 env:
     NEW_RELIC_ENABLED: 0
-    SPRYKER_CURRENT_REGION: EU
 
 command-timeout: 7200
+
+stores:
+    - DE
+    - AT
 
 sections:
     scheduler-clean:
         scheduler-clean:
             command: 'vendor/bin/console scheduler:clean -vvv --no-ansi || true'
+            stores: true
 
     clean-storage:
         clean-storage:
             command: 'vendor/bin/console storage:delete -vvv --no-ansi'
+            stores: true
+
+        clean-search:
+            command: 'vendor/bin/console elasticsearch:index:delete -vvv --no-ansi'
+            stores: true
 
         clean-db:
             command: 'vendor/bin/console propel:tables:drop -vvv --no-ansi'
+            stores:
+                - DE
+
+    init-storage:
+        queue-setup:
+            command: 'vendor/bin/console queue:setup'
+            stores: true
+        setup-search-create-sources:
+            command: 'vendor/bin/console search:setup:sources -vvv --no-ansi'
+            stores: true
 
     init-storages-per-region:
         propel-copy-schema:
@@ -28,46 +47,45 @@ sections:
 
         propel-tables-drop:
             command: 'vendor/bin/console propel:tables:drop -vvv --no-ansi'
+            stores:
+                - DE
 
         propel-diff:
             command: 'vendor/bin/console propel:diff -vvv --no-ansi'
 
         propel-migrate:
             command: 'vendor/bin/console propel:migrate -vvv --no-ansi'
+            stores:
+                - DE
 
         propel-migration-cleanup:
             command: 'vendor/bin/console propel:migration:delete -vvv --no-ansi'
 
         init-database:
             command: 'vendor/bin/console setup:init-db -vvv --no-ansi'
-
-    setup-queue:
-        queue-setup:
-            command: 'vendor/bin/console queue:setup'
+            stores:
+                - DE
 
     demodata:
-        import-demodata:
-            command: 'vendor/bin/console data:import --config=data/import/local/full_${SPRYKER_CURRENT_REGION}.yml'
+        import-eu-region-demodata:
+            command: 'vendor/bin/console data:import --config=data/import/production/full_EU.yml'
+            stores:
+                - DE
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update -vvv --no-ansi'
+            stores:
+                - DE
 
         check-product-validity:
             command: 'vendor/bin/console product:check-validity'
-
-    init-storage:
-        clean-search:
-            command: 'vendor/bin/console elasticsearch:index:delete -vvv --no-ansi'
-
-        setup-search-create-sources:
-            command: 'vendor/bin/console search:setup:sources -vvv --no-ansi'
-
-        trigger-events:
-            command: 'vendor/bin/console publish:trigger-events'
+            stores: true
 
     scheduler-start:
-        queue-setup:
-            command: 'vendor/bin/console queue:setup'
-
         scheduler-setup:
             command: 'vendor/bin/console scheduler:setup -vvv --no-ansi || true'
+            stores: true
+
+    publish-data:
+        trigger-events:
+            command: 'vendor/bin/console publish:trigger-events'
