--- a/config/install/destructive.yml
+++ b/config/install/destructive.yml
@@ -1,39 +1,20 @@
 env:
     NEW_RELIC_ENABLED: 0
+    SPRYKER_CURRENT_REGION: EU
 
 command-timeout: 7200
-
-stores:
-    - DE
-    - AT
 
 sections:
     scheduler-clean:
         scheduler-clean:
             command: 'vendor/bin/console scheduler:clean -vvv --no-ansi || true'
-            stores: true
 
     clean-storage:
         clean-storage:
             command: 'vendor/bin/console storage:delete -vvv --no-ansi'
-            stores: true
-
-        clean-search:
-            command: 'vendor/bin/console elasticsearch:index:delete -vvv --no-ansi'
-            stores: true
 
         clean-db:
             command: 'vendor/bin/console propel:tables:drop -vvv --no-ansi'
-            stores:
-                - DE
-
-    init-storage:
-        queue-setup:
-            command: 'vendor/bin/console queue:setup'
-            stores: true
-        setup-search-create-sources:
-            command: 'vendor/bin/console search:setup:sources -vvv --no-ansi'
-            stores: true
 
     init-storages-per-region:
         propel-copy-schema:
@@ -47,45 +28,46 @@ sections:
 
         propel-tables-drop:
             command: 'vendor/bin/console propel:tables:drop -vvv --no-ansi'
-            stores:
-                - DE
 
         propel-diff:
             command: 'vendor/bin/console propel:diff -vvv --no-ansi'
 
         propel-migrate:
             command: 'vendor/bin/console propel:migrate -vvv --no-ansi'
-            stores:
-                - DE
 
         propel-migration-cleanup:
             command: 'vendor/bin/console propel:migration:delete -vvv --no-ansi'
 
         init-database:
             command: 'vendor/bin/console setup:init-db -vvv --no-ansi'
-            stores:
-                - DE
+
+    setup-queue:
+        queue-setup:
+            command: 'vendor/bin/console queue:setup'
 
     demodata:
-        import-eu-region-demodata:
-            command: 'vendor/bin/console data:import --config=data/import/production/full_EU.yml'
-            stores:
-                - DE
+        import-demodata:
+            command: 'vendor/bin/console data:import --config=data/import/local/full_${SPRYKER_CURRENT_REGION}.yml'
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update -vvv --no-ansi'
-            stores:
-                - DE
 
         check-product-validity:
             command: 'vendor/bin/console product:check-validity'
-            stores: true
 
-    scheduler-start:
-        scheduler-setup:
-            command: 'vendor/bin/console scheduler:setup -vvv --no-ansi || true'
-            stores: true
+    init-storage:
+        clean-search:
+            command: 'vendor/bin/console elasticsearch:index:delete -vvv --no-ansi'
 
-    publish-data:
+        setup-search-create-sources:
+            command: 'vendor/bin/console search:setup:sources -vvv --no-ansi'
+
         trigger-events:
             command: 'vendor/bin/console publish:trigger-events'
+
+    scheduler-start:
+        queue-setup:
+            command: 'vendor/bin/console queue:setup'
+
+        scheduler-setup:
+            command: 'vendor/bin/console scheduler:setup -vvv --no-ansi || true'
