--- a/config/install/docker.ci.acceptance.dynamic-store-off.yml
+++ b/config/install/docker.ci.acceptance.dynamic-store-off.yml
@@ -16,9 +16,6 @@ sections:
         router-cache-warmup-backend-gateway:
             command: 'vendor/bin/console router:cache:warm-up:backend-gateway'
 
-        router-cache-warmup-merchant-portal:
-            command: 'vendor/bin/console router:cache:warm-up:merchant-portal'
-
         twig-cache-warmup:
             command: 'vendor/bin/console twig:cache:warmer'
 
@@ -71,13 +68,6 @@ sections:
         zed-build-frontend:
             command: 'vendor/bin/console frontend:zed:build -e production'
 
-        merchant-portal-build-frontend:
-            command: 'vendor/bin/console frontend:mp:build -e production'
-            timeout: 1600
-
-        date-time-product-configurator:
-            command: 'vendor/bin/console frontend:date-time-product-configurator:build'
-
     build-static-development:
         yves-build-frontend:
             command: 'vendor/bin/console frontend:yves:build'
@@ -85,12 +75,11 @@ sections:
         zed-build-frontend:
             command: 'vendor/bin/console frontend:zed:build'
 
-        merchant-portal-build-frontend:
-            command: 'vendor/bin/console frontend:mp:build'
-            timeout: 1600
-
-        date-time-product-configurator:
-            command: 'vendor/bin/console frontend:date-time-product-configurator:build'
+    init-storages-per-store:
+        queue-setup:
+            command: 'vendor/bin/console queue:setup'
+        setup-search-create-sources:
+            command: 'vendor/bin/console search:setup:sources'
 
     init-storages-per-region:
         propel-copy-schema:
@@ -111,24 +100,15 @@ sections:
         propel-migration-cleanup:
             command: 'vendor/bin/console propel:migration:delete'
 
-    demodata:
-        queue-setup:
-            command: 'vendor/bin/console queue:setup'
-
         init-database:
             command: 'vendor/bin/console setup:init-db'
 
+    demodata:
         import-eu-region-demodata:
             command: 'vendor/bin/console data:import --config=data/import/local/full_EU.yml'
 
         apply-scheduled-prices:
             command: 'vendor/bin/console price-product-schedule:apply'
-
-        setup-search-create-sources:
-            command: 'vendor/bin/console search:setup:sources'
-
-        propel-copy-schema:
-            command: 'vendor/bin/console propel:schema:copy'
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update'
