--- a/config/install/pre-deploy.dynamic-store-off.yml
+++ b/config/install/pre-deploy.dynamic-store-off.yml
@@ -1,8 +1,12 @@
 env:
     NEW_RELIC_ENABLED: 0
-    SPRYKER_CURRENT_REGION: EU
+
+stores:
+    - DE
+    - AT
 
 sections:
     scheduler-stop:
         scheduler-clean:
             command: 'vendor/bin/console scheduler:suspend -vvv --no-ansi'
+            stores: true
