--- a/deploy.ci.acceptance.mariadb.cypress.yml
+++ b/deploy.ci.acceptance.mariadb.cypress.yml
@@ -14,8 +14,8 @@ image:
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PUBLIC_KEY: 'BGqNWbv0hWM5CQ1-KwAfSQBMC6TMVFyrnh3vQp37oGCNvQ6eG_HyMjxBFJRWeCPTbzDoxcjhxLJS8Ck8r1G2oFw'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PRIVATE_KEY: 'UK6DywwjKITPpRHBSY9TLPIXm6BPrHX40sseIoXT9c8'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_SUBJECT: 'https://spryker.com'
-        SPRYKER_YVES_HOST_DE: yves.de.spryker.local
-        SPRYKER_YVES_HOST_AT: yves.at.spryker.local
+        SPRYKER_YVES_HOST_EU: yves.eu.spryker.local
+        SPRYKER_DYNAMIC_STORE_MODE: true
     node:
         version: 18
         npm: 9
@@ -36,27 +36,13 @@ regions:
                 username: spryker
                 password: secret
 
-        stores:
-            DE:
-                services:
-                    broker:
-                        namespace: de-docker
-                    key_value_store:
-                        namespace: 1
-                    search:
-                        namespace: de_search
-                    session:
-                        namespace: 1
-            AT:
-                services:
-                    broker:
-                        namespace: at-docker
-                    key_value_store:
-                        namespace: 2
-                    search:
-                        namespace: at_search
-                    session:
-                        namespace: 1
+            broker:
+                namespace: eu-docker
+                key_value_store:
+                    namespace: 1
+                search:
+                    namespace: eu_search
+
 groups:
     EU:
         region: EU
@@ -64,86 +50,57 @@ groups:
             merchant_portal_eu:
                 application: merchant-portal
                 endpoints:
-                    mp.de.spryker.local:
+                    mp.eu.spryker.local:
+                        region: EU
                         entry-point: MerchantPortal
-                        store: DE
                         primal: true
                         services:
                             session:
-                                namespace: 7
-                    mp.at.spryker.local:
-                        entry-point: MerchantPortal
-                        store: AT
-                        services:
-                            session:
-                                namespace: 8
+                                namespace: 1
             yves_eu:
                 application: yves
                 endpoints:
-                    date-time-configurator-example.spryker.local:
-                        entry-point: Configurator
-                    yves.de.spryker.local:
-                        store: DE
-                        services:
-                            session:
-                                namespace: 1
-                    yves.at.spryker.local:
-                        store: AT
+                    yves.eu.spryker.local:
+                        region: EU
                         services:
                             session:
                                 namespace: 2
             glue_eu:
                 application: glue
                 endpoints:
-                    glue.de.spryker.local:
-                        store: DE
-                    glue.at.spryker.local:
-                        store: AT
+                    glue.eu.spryker.local:
+                        region: EU
+            glue_storefront_eu:
+                application: glue-storefront
+                endpoints:
+                    glue-storefront.eu.spryker.local:
+                        region: EU
+            glue_backend_eu:
+                application: glue-backend
+                endpoints:
+                    glue-backend.eu.spryker.local:
+                        region: EU
             backoffice_eu:
                 application: backoffice
                 endpoints:
-                    backoffice.de.spryker.local:
-                        store: DE
+                    backoffice.eu.spryker.local:
+                        region: EU
+                        primal: true
                         services:
                             session:
                                 namespace: 3
-                    backoffice.at.spryker.local:
-                        store: AT
-                        services:
-                            session:
-                                namespace: 4
             backend_gateway_eu:
                 application: backend-gateway
                 endpoints:
-                    backend-gateway.de.spryker.local:
-                        store: DE
-                        primal: true
-                    backend-gateway.at.spryker.local:
-                        store: AT
+                    backend-gateway.eu.spryker.local:
+                        region: EU
                         primal: true
             backend_api_eu:
                 application: zed
                 endpoints:
-                    backend-api.de.spryker.local:
-                        store: DE
+                    backend-api.eu.spryker.local:
+                        region: EU
                         entry-point: BackendApi
-                    backend-api.at.spryker.local:
-                        store: AT
-                        entry-point: BackendApi
-            glue_storefront_eu:
-                application: glue-storefront
-                endpoints:
-                    glue-storefront.de.spryker.local:
-                        store: DE
-                    glue-storefront.at.spryker.local:
-                        store: AT
-            glue_backend_eu:
-                application: glue-backend
-                endpoints:
-                    glue-backend.de.spryker.local:
-                        store: DE
-                    glue-backend.at.spryker.local:
-                        store: AT
 
 services:
     database:
@@ -181,7 +138,7 @@ docker:
             enabled: false
 
     testing:
-        store: DE
+        region: EU
 
     mount:
         native:
