--- a/deploy.ci.api.mariadb.robot.yml
+++ b/deploy.ci.api.mariadb.robot.yml
@@ -4,9 +4,9 @@ namespace: spryker_ci
 tag: '1.0'
 
 environment: docker.ci
-pipeline: docker.ci.acceptance.dynamic-store
+pipeline: docker.ci.acceptance
 image:
-    tag: spryker/php:8.1
+    tag: spryker/php:8.2
     environment:
         SPRYKER_PRODUCT_CONFIGURATOR_HOST: date-time-configurator-example.spryker.local
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
@@ -91,7 +91,7 @@ groups:
 services:
     database:
         engine: mysql
-        version: mariadb-10.3
+        version: mariadb-10.4
         root:
             username: 'root'
             password: 'secret'
@@ -110,11 +110,7 @@ services:
         engine: redis
     search:
         engine: elastic
-        version: '6.8'
-    scheduler:
-        engine: jenkins
-        version: '2.442'
-        csrf-protection-enabled: true
+        version: '7.10'
     mail_catcher:
         engine: mailhog
     webdriver:
@@ -134,3 +130,7 @@ docker:
 
     mount:
         baked:
+
+    compose:
+        yamls:
+            - .robot/docker-compose.robot.yml
