--- a/deploy.dynamic-store-off.yml
+++ b/deploy.dynamic-store-off.yml
@@ -1,30 +1,40 @@
 version: '0.1'
 
-namespace: spryker_ci
+namespace: spryker_demo
 tag: '1.0'
 
-environment: docker.ci
-pipeline: docker.ci.acceptance.dynamic-store.robot
+environment: docker.dev
 image:
     tag: spryker/php:8.2
+    php:
+        enabled-extensions:
+            - blackfire
     environment:
         SPRYKER_PRODUCT_CONFIGURATOR_HOST: date-time-configurator-example.spryker.local
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
-        SPRYKER_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
+        SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PUBLIC_KEY: 'BGqNWbv0hWM5CQ1-KwAfSQBMC6TMVFyrnh3vQp37oGCNvQ6eG_HyMjxBFJRWeCPTbzDoxcjhxLJS8Ck8r1G2oFw'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PRIVATE_KEY: 'UK6DywwjKITPpRHBSY9TLPIXm6BPrHX40sseIoXT9c8'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_SUBJECT: 'https://spryker.com'
-        SPRYKER_YVES_HOST_EU: yves.eu.spryker.local
+        SPRYKER_YVES_HOST_DE: yves.de.spryker.local
+        SPRYKER_YVES_HOST_AT: yves.at.spryker.local
         SPRYKER_YVES_HOST_US: yves.us.spryker.local
-        SPRYKER_DYNAMIC_STORE_MODE: true
     node:
         version: 18
         npm: 9
 
 composer:
-    mode: '--no-dev --quiet'
+    mode: --no-dev
     autoload: --classmap-authoritative
+
+assets:
+    image: spryker/nginx-brotli:latest
+    mode: production
+    compression:
+        brotli:
+            static: on
+            level: 5
 
 regions:
     EU:
@@ -38,12 +48,23 @@ regions:
                 username: spryker
                 password: secret
 
-            broker:
-                namespace: eu-docker
-                key_value_store:
-                    namespace: 1
-                search:
-                    namespace: eu_search
+        stores:
+            DE:
+                services:
+                    broker:
+                        namespace: de-docker
+                    key_value_store:
+                        namespace: 1
+                    search:
+                        namespace: de_search
+            AT:
+                services:
+                    broker:
+                        namespace: at-docker
+                    key_value_store:
+                        namespace: 2
+                    search:
+                        namespace: at_search
     US:
         services:
             mail:
@@ -54,13 +75,15 @@ regions:
                 database: us-docker
                 username: spryker
                 password: secret
-            broker:
-                namespace: us-docker
-            key_value_store:
-                namespace: 2
-            search:
-                namespace: us_search
-
+        stores:
+            US:
+                services:
+                    broker:
+                        namespace: us-docker
+                    key_value_store:
+                        namespace: 3
+                    search:
+                        namespace: us_search
 groups:
     EU:
         region: EU
@@ -68,78 +91,105 @@ groups:
             merchant_portal_eu:
                 application: merchant-portal
                 endpoints:
-                    mp.eu.spryker.local:
-                        region: EU
+                    mp.de.spryker.local:
                         entry-point: MerchantPortal
+                        store: DE
                         primal: true
                         services:
                             session:
-                                namespace: 1
+                                namespace: 7
+                    mp.at.spryker.local:
+                        entry-point: MerchantPortal
+                        store: AT
+                        services:
+                            session:
+                                namespace: 8
             yves_eu:
                 application: yves
                 endpoints:
                     date-time-configurator-example.spryker.local:
                         entry-point: Configurator
-                    yves.eu.spryker.local:
-                        region: EU
+                    yves.de.spryker.local:
+                        store: DE
+                        services:
+                            session:
+                                namespace: 1
+                    yves.at.spryker.local:
+                        store: AT
                         services:
                             session:
                                 namespace: 2
             glue_eu:
                 application: glue
                 endpoints:
-                    glue.eu.spryker.local:
-                        region: EU
+                    glue.de.spryker.local:
+                        store: DE
+                        cors-allow-origin: '*'
+                    glue.at.spryker.local:
+                        store: AT
             glue_storefront_eu:
                 application: glue-storefront
                 endpoints:
-                    glue-storefront.eu.spryker.local:
-                        region: EU
+                    glue-storefront.de.spryker.local:
+                        store: DE
+                    glue-storefront.at.spryker.local:
+                        store: AT
             glue_backend_eu:
                 application: glue-backend
                 endpoints:
-                    glue-backend.eu.spryker.local:
-                        region: EU
+                    glue-backend.de.spryker.local:
+                        store: DE
+                    glue-backend.at.spryker.local:
+                        store: AT
             backoffice_eu:
                 application: backoffice
                 endpoints:
-                    backoffice.eu.spryker.local:
-                        region: EU
+                    backoffice.de.spryker.local:
+                        store: DE
                         primal: true
                         services:
                             session:
                                 namespace: 3
+                    backoffice.at.spryker.local:
+                        store: AT
+                        services:
+                            session:
+                                namespace: 4
             backend_gateway_eu:
                 application: backend-gateway
                 endpoints:
-                    backend-gateway.eu.spryker.local:
-                        region: EU
+                    backend-gateway.de.spryker.local:
+                        store: DE
+                        primal: true
+                    backend-gateway.at.spryker.local:
+                        store: AT
                         primal: true
             backend_api_eu:
                 application: zed
                 endpoints:
-                    backend-api.eu.spryker.local:
-                        region: EU
+                    backend-api.de.spryker.local:
+                        store: DE
                         entry-point: BackendApi
-
+                    backend-api.at.spryker.local:
+                        store: AT
+                        entry-point: BackendApi
     US:
         region: US
         applications:
-            mportal_us:
+            merchant_portal_us:
                 application: merchant-portal
                 endpoints:
                     mp.us.spryker.local:
-                        region: US
                         entry-point: MerchantPortal
-                        primal: true
+                        store: US
                         services:
                             session:
-                                namespace: 4
+                                namespace: 9
             yves_us:
                 application: yves
                 endpoints:
                     yves.us.spryker.local:
-                        region: US
+                        store: US
                         services:
                             session:
                                 namespace: 5
@@ -147,23 +197,22 @@ groups:
                 application: glue
                 endpoints:
                     glue.us.spryker.local:
-                        region: US
+                        store: US
             glue_storefront_us:
                 application: glue-storefront
                 endpoints:
                     glue-storefront.us.spryker.local:
-                        region: EU
+                        store: US
             glue_backend_us:
                 application: glue-backend
                 endpoints:
                     glue-backend.us.spryker.local:
-                        region: EU
+                        store: US
             backoffice_us:
                 application: backoffice
                 endpoints:
                     backoffice.us.spryker.local:
-                        region: US
-                        primal: true
+                        store: US
                         services:
                             session:
                                 namespace: 6
@@ -171,15 +220,13 @@ groups:
                 application: backend-gateway
                 endpoints:
                     backend-gateway.us.spryker.local:
-                        region: US
-                        primal: true
+                        store: US
             backend_api_us:
                 application: zed
                 endpoints:
                     backend-api.us.spryker.local:
-                        region: US
+                        store: US
                         entry-point: BackendApi
-
 services:
     database:
         engine: mysql
@@ -196,21 +243,48 @@ services:
         api:
             username: 'spryker'
             password: 'secret'
+        endpoints:
+            queue.spryker.local:
+            localhost:5672:
+                protocol: tcp
     session:
         engine: redis
     key_value_store:
         engine: redis
+        endpoints:
+            localhost:16379:
+                protocol: tcp
     search:
         engine: elastic
         version: '7.10'
+        endpoints:
+            localhost:9200:
+                protocol: tcp
+    scheduler:
+        engine: jenkins
+        version: '2.442'
+        csrf-protection-enabled: true
+        endpoints:
+            scheduler.spryker.local:
     mail_catcher:
         engine: mailhog
+        endpoints:
+            mail.spryker.local:
+    swagger:
+        engine: swagger-ui
+        endpoints:
+            swagger.spryker.local:
+    dashboard:
+        engine: dashboard
+        endpoints:
+            spryker.local:
     webdriver:
         engine: chromedriver
 
 docker:
     ssl:
         enabled: false
+        redirect: true
 
     debug:
         enabled: false
@@ -218,7 +292,7 @@ docker:
             enabled: false
 
     testing:
-        region: EU
+        store: DE
 
     mount:
         baked:
